# django-cookiecutter-rest

./: CHANGELOG.md  LICENSE.txt  README.MD  README.md  Readme.MD  Readme.md  cookiecutter.json  readme.md
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.json  entrypoint.sh  gunicornconfig.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  startup.sh
{{cookiecutter.project_slug}}/.github/: dependabot.yml  pull_request_template.md
{{cookiecutter.project_slug}}/.github/old_workflows/: release_tag.yml
{{cookiecutter.project_slug}}/.github/workflows/: cqa.yml  master_checks.yml  pr_checks.yml  release_checks.yml  sanity-check.yml
{{cookiecutter.project_slug}}/accounts/: admin.py  email.py  managers.py
{{cookiecutter.project_slug}}/accounts/templates/email/: invitation.html  password_reset_v1.html
{{cookiecutter.project_slug}}/app/: manage.py  pyproject.toml
{{cookiecutter.project_slug}}/app/accounts/: admin.py  managers.py  models.py  serializers.py
{{cookiecutter.project_slug}}/app/accounts/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/app/devutils/: fields.py  middleware.py  permissions.py
{{cookiecutter.project_slug}}/app/{{ cookiecutter.django_project_name }}/: asgi.py  settings.py  wsgi.py
{{cookiecutter.project_slug}}/app/{{cookiecutter.project_name}}/: asgi.py
{{cookiecutter.project_slug}}/devutils/: models.py  views.py
{{cookiecutter.project_slug}}/{{ cookiecutter.app_directory }}/: manage.py
{{cookiecutter.project_slug}}/{{ cookiecutter.app_directory }}/accounts/: admin.py  email.py  models.py  serializers.py
{{cookiecutter.project_slug}}/{{ cookiecutter.app_directory }}/devutils/: fields.py  middleware.py  models.py  permissions.py  views.py
{{cookiecutter.project_slug}}/{{ cookiecutter.app_directory }}/{{ cookiecutter.django_project_name }}/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_name}}/: settings.py  urls.py  wsgi.py
(+4 files in other folders)
