[tool.black]
line-length = 120
include = \.pyi?$
exclude = \.git
          | \.hg
          | \.mypy_cache
          | \.tox
          | \.venv
          | \.env
          | _build
          | buck-out
          | build
          | dist


[options]
python_requires = >=3.8

[coverage:run]
include = {{ cookiecutter.project_slug }}/*
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin
