[tool.black]
line-length = 119
include = \.pyi?$
exclude = \.git
          | \.hg
          | \.mypy_cache
          | \.tox
          | \.venv
          | \.env
          | _build
          | buck-out
          | build
          | dist



[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119


[tool.isort]
known_first_party = django
combine_as_imports = true
multi_line_output = 3
line_length = 119
include_trailing_comma = true

[options]
python_requires = >=3.8

[coverage:run]
# include = {{ cookiecutter.project_slug }}/*
omit =
    .*/,
    *apps.py,
    *env/*,
    *env/*,
    *venv/*,
    */migrations/*,
    */management/*,
    *settings*,
    */tests/*,
    *test_runner.py,
    *tests.py,
    *urls.py,
    *wsgi/*,
    manage.py,
    .*,
